tests/neg/semantic_array_init_count_mismatch.baa
// EXPECT: عدد عناصر تهيئة المصفوفة

صحيح الرئيسية() {
    صحيح أ[٣] = {١، ٢، ٣، ٤}.
    إرجع ٠.
}
